[project]
name = "epstein-api"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-cors",
    "flask-caching",
    "gunicorn",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-flask",
    "pytest-cov",
    "pytest-html",
    "ruff~=0.15.11",
]

[tool.uv]
package = false
default-groups = "all"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RET", "PTH"]
ignore = [
    "SIM103",  # `if cond: return True; return False` -> `return cond` (hurts readability)
    "SIM108",  # if/else -> ternary (hurts readability)
]
